--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ HOST=localhost
 USER=root
 PASSWORD=ngockhuong2003
 DATABASE=ToDoListData
+SOCKETPATH=/Users/mac/Documents/JavaScript/train-mongodb/backup.sql
