--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^7.0.5",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "sequelize": "^6.31.1"
   },
   "devDependencies": {
