--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-PORT=8000
+PORT=3000
 HOST=localhost
-USER=root
+USERNAME=root
 PASSWORD=ngockhuong2003
-DATABASE=ToDoListData
-SOCKETPATH=/Users/mac/Documents/JavaScript/train-mongodb/backup.sql
+DATABASE=todolistdata
